--- a/src/assets/styles/_colors.css
+++ b/src/assets/styles/_colors.css
@@ -8,18 +8,13 @@
     var(--primary-saturation),
     var(--primary-lightness)
   );
-  /* --color-light: var(--gray-50);
-  --color-light-accent: var(--gray-100);
-  --color-dark-accent: var(--gray-700);
-  --color-dark: var(--gray-900); */
   --color-light: #ECE1CB;
   --color-light-accent: hsl(32, 35%, 80%);
   --color-dark-accent: #735D43;
   --color-dark: #433523;
-  
+
   --color-focus: var(--color-dark);
   --color-focus-shadow: var(--color-dark-accent);
-
 
   --shadow-color: 240deg 2% 66%;
   --shadow-elevation-low: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
@@ -35,4 +30,13 @@
   --bezier-swift: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
   --horizontal-line: var(--horizontal-line-dark);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-dark: hsl(40, 46%, 80%);
+    --color-dark-accent: hsl(32, 35%, 80%);
+    --color-light-accent: hsl(32, 26%, 10%);
+    --color-light: hsl(34, 31%, 2%);
+  }
 }
