--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -27,10 +27,10 @@ eleventyComputed:
         {% endfor -%}
     </ul>
 </nav>
-<h1>
+<h1 class="visually-hidden">
     {{ "Latest" if currentCategory == 'All' else currentCategory }}
 </h1>
-<ul data-layout="stack" role="list" data-props="recursive">
+<ul data-layout="stack" role="list" >
     {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
     {%- for entry in entries %}
         {% include "partials/story-card-entry.njk" %}
