--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,8 +1,15 @@
-<header  data-layout="cluster" data-props="y:center x:between">
+<header data-layout="cluster" data-props="y:center x:between">
     <a data-font="sans-serif" data-props="y:center" data-button="text" href="/">
         <span>{{ meta.site_name }}</span>
     </a>
-    {# {% include "partials/site-breadcrumbs.njk" %} #}
+    <ul role="list" data-layout="cluster">
+        <li>
+            <a data-button="text" href="/about">About</a>
+        </li>
+        <li>
+            <a data-button="text" href="/feed.xml">RSS</a>
+        </li>
+    </ul>
+    {% include "partials/site-theme-toggle.njk" %}
 
-    <a data-font="sans-serif" data-button="text" href="/about">About</a>
 </header>
