--- a/src/assets/styles/_globals.css
+++ b/src/assets/styles/_globals.css
@@ -6,6 +6,7 @@
 html {
   scroll-behavior: smooth;
 }
+
 body {
   font-family: var(--font-sans-serif);
   font-size: var(--step-0);
@@ -18,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-  --measure: 40ch;
+  --measure: 50ch;
   line-height: 1.2;
   font-family: var(--font-sans-serif);
   
@@ -60,8 +61,7 @@ h3,
 h4,
 h5,
 h6,
-p,
-li {
+p {
   max-width: var(--measure);
 }
 
@@ -84,10 +84,15 @@ li {
   background: var(--color-dark);
 }
 
+ul, ol, menu{
+  max-width: var(--list-measure, var(--measure));
+
+}
 ul[role="list"],
 ol[role="list"] {
   list-style: none;
   padding-left: var(--padding, initial);
+  --list-measure: initial;
 }
 
 ol {
@@ -131,11 +136,7 @@ blockquote {
   width: fit-content;
 }
 
-:root {
-  --page-top: var(--space-m, 6rem);
-  --header-height: var(--space-xl);
-  --responsive-padding: var(--space-s-6xl, 1rem);
-}
+
 
 .measured-container {
   max-width: var(--measure);
