--- a/src/assets/styles/_layouts.css
+++ b/src/assets/styles/_layouts.css
@@ -21,8 +21,8 @@
 
 /* Slice credits: https://www.sarasoueidan.com/ */
 [data-layout~="slice"] {
-  padding-top: var(--space-s-3xl, 1rem);
-  padding-bottom: var(--space-s-3xl, 1rem);
+  padding-top: var(--space-xs-3xl, 1rem);
+  padding-bottom: var(--space-xs-3xl, 1rem);
 }
 
 /*----------  Center Layout  ----------*/
