--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -13,7 +13,7 @@ eleventyComputed:
     description: "{{meta.site_description}} Home - {{currentCategory}}"
     eleventyNavigation:
         key: "{{currentCategory}}"
-        title: "Back to {{currentCategory}}"
+        title: "{{currentCategory}}"
 ---
 
 <nav class="categories-navigation" aria-labelledby="Navigate by topics">
@@ -22,7 +22,7 @@ eleventyComputed:
             {% set category_url = '' if category == 'All' else category | slugify %}
             <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
                 {% set isActive = 'active' if currentCategory == category %}
-                <a data-props="x:center" data-button="{{ isActive }} tag small" href="/{{ category_url }}">{{ 'All' if category == 'All' else category }}</a>
+                <a data-props="x:center" data-button="{{ isActive }} tag" href="/{{ category_url }}">{{ 'All' if category == 'All' else category }}</a>
             </li>
         {% endfor -%}
     </ul>
@@ -30,7 +30,7 @@ eleventyComputed:
 <h1 class="visually-hidden">
     {{ "Latest" if currentCategory == 'All' else currentCategory }}
 </h1>
-<ul data-layout="stack" role="list" >
+<ul  data-layout="stack" data-props="recursive" role="list" >
     {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
     {%- for entry in entries %}
         {% include "partials/story-card-entry.njk" %}
