--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,15 +1,9 @@
-<header data-layout="cluster" data-props="y:center x:between">
-    <a data-font="sans-serif" data-props="y:center" data-button="text" href="/">
+<header data-layout="cluster" data-props="y:center">
+    <a data-font="sans-serif" data-props="y:center" data-button="link" href="/">
         <span>{{ meta.site_name }}</span>
     </a>
-    <ul role="list" data-layout="cluster">
-        <li>
-            <a data-button="text" href="/about">About</a>
-        </li>
-        <li>
-            <a data-button="text" href="/feed.xml">RSS</a>
-        </li>
-    </ul>
-    {% include "partials/site-theme-toggle.njk" %}
-
+    <aside data-layout="cluster" data-props="y:center">
+        <a data-button="link" href="/about">About</a>
+        {% include "partials/site-theme-toggle.njk" %}
+    </aside>
 </header>
