--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,9 +1,9 @@
 <li>
-    <a data-heading="5" class="headline-link" itemprop="url" data-button="link" href="/{{ entry.slug }}">
-        <span aria-hidden="true">
+    <a data-heading="5" class="headline-entry" itemprop="url" data-button="link" href="/{{ entry.slug }}">
+        {# <span aria-hidden="true">
             {{entry.icon}}
-        </span>
-        <span class="headline">
+        </span> #}
+        <span class="headline-text">
             {{ entry.name }}
         </span>
     </a>
