--- a/src/content/preferences-page.njk
+++ b/src/content/preferences-page.njk
@@ -14,3 +14,4 @@ eleventyComputed:
 <h1>Preferences</h1>
 
 {% include "partials/preference-color-scheme.njk"%}
+{% include "partials/preference-link-visited.njk"%}
