fix: flickering at page load - apply settings before rendering th page - retrieve the state per control

--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -45,5 +45,5 @@
         <link rel="prefetch" href="/{{story.slug}}/" as="document">
     {% endfor%} #}
     
-    <script src="/assets/scripts/app.js" defer></script>
+    <script src="/assets/scripts/app.js"></script>
 </head>
