--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,9 +1,9 @@
 <header data-layout="cluster" data-props="y:center">
-    <a data-font="sans-serif" data-props="y:center" data-button="link" href="/">
+    <a data-font="sans-serif" data-props="y:center" data-button="text" href="/">
         <span>{{ meta.site_name }}</span>
     </a>
     <aside data-layout="cluster" data-props="y:center">
-        <a data-button="link" href="/about">About</a>
+        <a data-button="text" href="/about">About</a>
         {% include "partials/site-theme-toggle.njk" %}
     </aside>
 </header>
