--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,8 +1,5 @@
 <li>
-    <a data-heading="5" class="headline-entry" itemprop="url" data-button="link" href="/{{ entry.slug }}">
-        {# <span aria-hidden="true">
-            {{entry.icon}}
-        </span> #}
+    <a class="headline-entry" itemprop="url" data-button="link" href="/{{ entry.slug }}" data-icon="{{entry.icon}}">
         <span class="headline-text">
             {{ entry.name }}
         </span>
