feat: Hide visited tag

--- a/src/_includes/partials/preference-color-scheme.njk
+++ b/src/_includes/partials/preference-color-scheme.njk
@@ -1,5 +1,5 @@
 <template class="color-scheme-template">
-    <form class="color-scheme-form">
+    <form class="color-scheme-form measured-container">
         <fieldset>
             <legend>Theme</legend>
             <label>
