--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -4,6 +4,7 @@
     </a>
     <aside data-layout="cluster" data-props="y:center">
         <a data-button="text" href="/about">About</a>
-        {% include "partials/site-theme-toggle.njk" %}
+        <a data-button="text" href="/preferences">Preferences</a>
+        {# {% include "partials/site-theme-toggle.njk" %} #}
     </aside>
 </header>
