--- a/src/assets/styles/components/_buttons.css
+++ b/src/assets/styles/components/_buttons.css
@@ -5,7 +5,7 @@
   min-height: var(--minimum-height);
   line-height: var(--button-line-height, --minimum-height);
   text-decoration: var(--button-text-decoration);
-  text-decoration-color: var(--color-primary);
+  text-decoration-color: var(--button-text-decoration-color, var(--color-primary));
   text-decoration-thickness: var(--border-thin);
   color: var(--button-color, var(--color-dark));
   background-color: var(--button-background-color, var(--color-light));
